# sam-3d-objects

./: .gitignore  README.md  create_pointmap.py  demo.py  sam3d_zmq_server.py  transform_mesh_to_world.py
doc/: setup.md
notebook/images/ref_views_4/ob_0000001/: select_frames.yml
notebook/images/ref_views_4/ob_0000002/: select_frames.yml
notebook/images/ref_views_4/ob_0000003/: select_frames.yml
notebook/images/ref_views_4/ob_0000004/: select_frames.yml
notebook/images/ref_views_4/ob_0000005/: select_frames.yml
notebook/images/ref_views_4/ob_0000006/: select_frames.yml
notebook/images/ref_views_4/ob_0000007/: select_frames.yml
notebook/images/ref_views_4/ob_0000008/: select_frames.yml
notebook/images/ref_views_4/ob_0000009/: select_frames.yml
notebook/images/ref_views_4/ob_0000010/: select_frames.yml
notebook/images/ref_views_4/ob_0000011/: select_frames.yml
notebook/images/ref_views_4/ob_0000012/: select_frames.yml
notebook/images/ref_views_4/ob_0000013/: K.txt  select_frames.yml
ros2_bridge_ws/: README.md
ros2_bridge_ws/src/sam3d_ros2_bridge/: package.xml  setup.cfg  setup.py
ros2_bridge_ws/src/sam3d_ros2_bridge/config/: sam3d_bridge.yaml
ros2_bridge_ws/src/sam3d_ros2_bridge/launch/: sam3d_bridge.launch.py
ros2_bridge_ws/src/sam3d_ros2_bridge/sam3d_ros2_bridge/: __init__.py  action_server.py  test_client.py
ros2_bridge_ws/src/sam3d_ros2_interface/: CMakeLists.txt  package.xml
ros2_bridge_ws/src/sam3d_ros2_interface/action/: Sam3DInference.action
ros2_bridge_ws/src/sam3d_ros2_interface/msg/: MeshData.msg
(+292 files in other folders)
